GearsetPOC/force-app/main/default/objects/EBSC_Items__c/EBSC_Items__c.object-meta.xml
<CustomObject>
    <description>All items in EBSC which can be borrowed
All items in EBSC for which ownership needs to be checked</description>
    <label>EBSC Items</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBSC Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>