GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Any additional information that needs to be entered against a record</description>
    <inlineHelpText>Please enter any additional information on this record</inlineHelpText>
    <label>Additional Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>