GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Check_Out_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Laptop__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick this box when you are borrowing an item</inlineHelpText>
    <label>Check Out Laptop</label>
    <type>Checkbox</type>
</CustomField>