GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Check_out_Token__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick this box when you are returning the item you have borrowed</inlineHelpText>
    <label>Check out Token</label>
    <type>Checkbox</type>
</CustomField>