GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Communal_Token__c.field-meta.xml
<CustomField>
    <fullName>Communal_Token__c</fullName>
    <label>Communal Token</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Department Managers</fullName>
            </value>
            <value>
                <fullName>HLC</fullName>
            </value>
            <value>
                <fullName>Secondary Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>