GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Date_Time_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Issued__c</fullName>
    <label>Date/Time Issued</label>
    <type>DateTime</type>
</CustomField>