GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Issued_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RSA_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>