GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Laptop_Model__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Model__c</fullName>
    <description>Type of laptop and model name</description>
    <label>Laptop Model</label>
    <length>15</length>
    <type>Text</type>
</CustomField>