GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/PIN__c.field-meta.xml
<CustomField>
    <fullName>PIN__c</fullName>
    <label>PIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>