GearsetPOC/force-app/main/default/objects/EBSC_Items__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>Serial number for the laptops</inlineHelpText>
    <label>Serial Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>