GearsetPOC/force-app/main/default/objects/EBSC_Items__c/recordTypes/Laptop.recordType-meta.xml
<RecordType>
    <fullName>Laptop</fullName>
    <active>true</active>
    <description>EBSC Laptops</description>
    <label>Laptop</label>
</RecordType>