GearsetPOC/force-app/main/default/objects/EBSC_Items__c/recordTypes/RSA_Token.recordType-meta.xml
<RecordType>
    <fullName>RSA_Token</fullName>
    <active>true</active>
    <description>RSA token</description>
    <label>RSA Token</label>
</RecordType>