GearsetPOC/force-app/main/default/objects/EBSC_Items__c/listViews/Laptops.listView-meta.xml
<ListView>
    <fullName>Laptops</fullName>
    <columns>NAME</columns>
    <columns>Laptop_Model__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Time_Issued__c</columns>
    <columns>Date_Time_Returned__c</columns>
    <columns>Issued_To__c</columns>
    <columns>Additional_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EBSC_Items__c.Laptop</value>
    </filters>
    <label>Laptops</label>
    <language>en_US</language>
</ListView>