GearsetPOC/force-app/main/default/objects/EBSC_Items__c/listViews/RSA_Tokens.listView-meta.xml
<ListView>
    <fullName>RSA_Tokens</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Time_Issued__c</columns>
    <columns>Issued_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EBSC_Items__c.RSA_Token</value>
    </filters>
    <label>RSA Tokens</label>
    <language>en_US</language>
</ListView>